# llaisys

./: conftest.py  pytest.ini  xmake.lua
.github/workflows/: build.yaml
doc/: novainfer_overview_2026-03-14.md  novainfer_requirements_2026-03-14.md  novainfer_test_plan_2026-03-14.md  overview_2026-03-14.md  qwen2_interface.md  qwen2_overview.md  qwen2_requirements.md  requirements_2026-03-14.md  task_complete_status.md  test_plan_2026-03-14.md  tutorial.md
include/: llaisys.h
include/llaisys/: tensor.h  (+1 more)
python/: setup.cfg
python/llaisys/: __init__.py
python/llaisys/bindings/: __init__.py  ops.py  runtime.py  tensor.py
python/llaisys/engine/: __init__.py  batch_plan.py  block_manager.py  buffers.py  config.py  cpu_model_runner.py  engine_client.py  executor.py  gpu_model_runner.py  input_processor.py  llm_engine.py  model_registry.py  mp_executor.py  runtime_factory.py  sampler.py  scheduler.py  sequence.py  shm_batch_plan.py  types.py  worker.py
python/llaisys/entrypoints/: llm.py
python/llaisys/libllaisys/: __init__.py  llaisys_types.py  model.py  qwen2.py  runtime.py  tensor.py
python/llaisys/models/: qwen2.py
python/llaisys/server/: __init__.py  __main__.py  async_engine.py  http_server.py  openai_server.py  schemas.py
python/llaisys/utils/: __init__.py  nvtx.py
scripts/: bench_compare_vllm.py  plot_perf_experiments.py  run_perf_experiments.py  run_tests.py  run_tp_perf_experiments.py  tp_hf_parity.py
src/: utils.hpp
test/: README.md  test_ops.py  test_utils.py
webui/: app.js  index.html  styles.css
xmake/: cpu.lua  maca.lua  nvidia.lua
(+129 files in other folders)
