[metadata]
name = llaisys
version = 0.1.0
description = Python APIs for llaisys
author = Pan Zezhong
license = MIT

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    torch>=2.4.0
    transformers
    accelerate
    ml-dtypes
    vllm>=0.16.0

[options.extras_require]
test =
    pytest>=8.0

[options.package_data]
llaisys = 
    libllaisys/*.so
    libllaisys/*.dll
    libllaisys/*.dylib
